# react-docx

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tmp_render_fd_header.ts  tsconfig.base.json  vitest.config.ts
.changeset/: bundle-react-docx-internals.md  editing-perf-structural-sharing.md
.githooks/: pre-commit
.github/workflows/: publish.yml
.playwright-cli/: page-2026-04-06T23-32-53-166Z.yml  page-2026-04-06T23-37-43-314Z.yml
apps/playground/: CHANGELOG.md  package.json  vite.config.ts
crates/docx-core/: Cargo.toml
crates/docx-wasm/: Cargo.toml
crates/docx-wasm/src/: lib.rs
scripts/: check-local-docx-visual-fidelity.mjs  measure_png_visual_diff.py  prepare-local-docx-visual-regression.mjs  verify-docx-fidelity-corpus.mjs
tests/benchmarks/: editing-performance.test.ts
tests/unit/: 95c3ea-pagination-debug.test.ts  copy-of-proposal-cover-pagination.test.ts  cover-section-break-spacer.test.ts  dealpage-import-fidelity.test.ts  dealpage-saas-import-fidelity.test.ts  doc-model-import.test.ts  dual-wrapped-image-layout.test.ts  editor-ops.test.ts  employment-agreement-import-fidelity.test.ts  endnotes-import-render.test.ts  footer-floating-position.test.ts  footer-page-field-import.test.ts  footer-pagination-reserve.test.ts  footer-right-tab-layout.test.ts  footnote-hyperlink-render.test.ts  green-proposal-cover-import-fidelity.test.ts  grouped-picture-textbox-render.test.ts  header-column-origin-fidelity.test.ts  header-footer-variant-fidelity.test.ts  header-import-fidelity.test.ts  image-wrap-state.test.ts  layout-core.test.ts  (+36 more)
(+15 files in other folders)
